# multi-agent-trading-system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/agents/: state.py  workflow.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/mcp_server/: __init__.py  server.py
backend/app/services/: __init__.py  backtest.py  data_provider.py  indicators.py  llm.py  rag.py  report.py  risk.py  sample_data.py  store.py
backend/tests/: conftest.py  test_api.py  test_backtest.py  test_indicators.py  test_llm_report.py  test_rag.py  test_workflow.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: AgentDetailPanel.tsx  AgentTimeline.tsx  AppErrorBoundary.tsx  BacktestPanel.tsx  EvidencePanel.tsx  MetricGrid.tsx  PriceChart.tsx  RagIngestPanel.tsx  ReportPanel.tsx  StockSearch.tsx
frontend/src/lib/: api.ts
frontend/src/types/: analysis.ts
frontend/tests/: App.test.tsx  PriceChart.test.tsx  ReportPanel.test.tsx  workbench.spec.ts
infra/k8s/: backend.yaml  configmap.yaml  frontend.yaml  kustomization.yaml  namespace.yaml  qdrant.yaml  secret.example.yaml
