[project]
name = "multi-agent-trading-backend"
version = "0.1.0"
description = "FastAPI + LangGraph multi-agent A-share quantitative analysis backend"
requires-python = ">=3.9"
dependencies = [
  "akshare>=1.14.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "mcp>=1.0.0",
  "pydantic>=2.7.0",
  "qdrant-client>=1.9.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
